--- a/etc/bot-api.yaml
+++ b/etc/bot-api.yaml
@@ -3,7 +3,9 @@ Host: 0.0.0.0
 Port: 1001
 DSN: "bot.db"
 GEWE:
-  token: 447d53fdf6354f1791531049fdba865c
-  appId: wx_6UI6kq1iECVFmp5pqQBp4
+  token: b63a019068a941ebbc9536760574acfe
+  appId: wx_hMugVctQ37ggE486XFBPb
 LOG:
   stat: false
+GenAI:
+  apikey: AIzaSyCXK-vObm6awqRWdMZ-PrbiLPessfeGAkc
